# topolink

./: .gitignore  EDGE_SPLIT_ALGORITHM.md  EDGE_SPLIT_IMPLEMENTATION.md  README.md  ToDo.md  cleanup.py  plot_convergence.py  render_config.json  smoother.md  start_gui.py  usercontrols.md
.claude/: settings.local.json
TopoLink/: CMakeLists.txt  resources.qrc
TopoLink/resources/: MeshingApp.icns
TopoLink/src/: main.cpp
TopoLink/src/core/: DimensionChord.h  EllipticSolver.cpp  EllipticSolver.h  GraphSolver.cpp  GraphSolver.h  MeshExporter.cpp  MeshExporter.h  MetadataHolder.h  ObjectPool.h  Smoother.cpp  Smoother.h  SmootherConfig.h  TopoEdge.cpp  TopoEdge.h  TopoFace.cpp  TopoFace.h  TopoHalfEdge.h  TopoNode.cpp  TopoNode.h  Topology.cpp  Topology.h
TopoLink/src/gui/: BannerWidget.cpp  BannerWidget.h  EntityOwner.h  GroupDelegates.cpp  GroupDelegates.h  MainWindow.cpp  MainWindow.h  OccView.cpp  OccView.h  ProjectManager.cpp  ProjectManager.h  SplitEdgeDialog.h
TopoLink/src/gui/pages/: ConvergencePlot.cpp  ConvergencePlot.h  GeometryPage.cpp  GeometryPage.h  README.md  SmootherPage.cpp  SmootherPage.h  TopologyPage.cpp  TopologyPage.h
TopoLink/tests/: CMakeLists.txt  README.md  main_test.cpp  test_edge_split.cpp
TopoLink/tests/core/: TestTopology.cpp
geometries/: generate_shapes.py
